--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "EHR (Electronic Health Record) destiné à des cliniques et cabinets",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -24,7 +24,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
