test 3 ci/cd after up docker compose and ci-cd.yaml

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,22 @@
-﻿NODE_ENV=
-PORT=
+﻿# MongoDB Configuration
+MONGO_URI=mongodb://admin:password@localhost:27017/careflow?authSource=admin
+MONGO_USERNAME=admin
+MONGO_PASSWORD=password
+MONGO_DB=careflow
 
-MONGO_URI=
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_DB=
+# Server Configuration
+PORT=3000
+NODE_ENV=development
 
-JWT_SECRET=your-super-secret-jwt-key
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+
+# Frontend URL (for password reset emails)
+FRONTEND_URL=http://localhost:3000
+
+# Email Configuration (if using nodemailer)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-email-password
