--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,5 +47,11 @@ jobs:
       - name: Build Docker Image
         run: docker build -t careflow-backend ./backend
 
-      - name: Run Docker Compose 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
+      - name: Run Docker Compose
         run: docker-compose -f backend/compose.yaml up -d
